Fix image display on small screens

--- a/src/styling/layout.css
+++ b/src/styling/layout.css
@@ -230,7 +230,12 @@ nav h3 {
 .nav-img {
     max-width: 4em;
     margin-left: 10px;
-    display: none !important;
+}
+
+@media (max-width: 550px) {
+    .nav-img {
+        display: none !important;
+    }
 }
 
 @media (min-width: 550px) {
